[tool.tox]
legacy_tox_ini = """
[tox]

[testenv:tests]
changedir = tests
deps = -rtests/requirements.txt

commands =
    coverage run -m unittest discover -p "*.py"
    coverage xml

"""

[build-system]
requires = ["setuptools", "setuptools-rust"]
build-backend = "setuptools.build_meta"

[project]
name = "anisoap"
version = "0.0.0"

[tool.setuptools.packages]
# Pure Python packages/modules
find = { where = ["."] }

[[tool.setuptools-rust.ext-modules]]
# Private Rust extension module to be nested into the Python package
target = "anisoap.fibbers"  # The last part of the name (e.g. "_lib") has to match lib.name in Cargo.toml,
                             # but you can add a prefix to nest it inside of a Python package.
path = "Cargo.toml"      # Default value, can be omitted
binding = "PyO3"         # Default value, can be omitted


[tool.coverage.run]
branch = true
data_file = "tests/.coverage"

[tool.coverage.report]
include = ["anisoap/*"]

[tool.coverage.xml]
output = "tests/coverage.xml"
