[metadata]
name = anisoap
long_description = file: README.md
long_description_content_type = text/markdown

license_files = LICENSE
author = Kevin Kazuki Huguenin-Dumittan, Jigyasa Nigam, Rose K. Cersonsky
author_email = rose.cersonsky@wisc.edu
description = A package for computing anisotropic extensions to the SOAP formalism
; keywords =
classifiers = Development Status :: 3 - Alpha
		Environment :: Console
		Intended Audience :: Science/Research
		License :: OSI Approved :: BSD License
		Natural Language :: English
		Programming Language :: Python
		Topic :: Scientific/Engineering

[options]
include_package_data = True
zip_safe = True
packages = find:
install_requires = numpy
									scipy
									pytest
									coverage
									wigners
