[package]
name = "anisoap_rust_lib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "anisoap_rust_lib"
crate-type = ["dylib"]

[dependencies]
pyo3 = { version = "0.19.0", features = ["extension-module"] }
numpy = "0.19.0"
# equistore = { git = "https://github.com/lab-cosmo/equistore.git" }
# rascaline = { git = "https://github.com/Luthaf/rascaline", default-features = false }